[gd_scene load_steps=16 format=3 uid="uid://cvgg1pfn3qigb"]

[ext_resource type="Script" path="res://level_3.gd" id="1_7wba6"]
[ext_resource type="PackedScene" uid="uid://4ehixoj5k31m" path="res://Player/sola.tscn" id="2_1sulp"]
[ext_resource type="AudioStream" uid="uid://bwi227fhyrywd" path="res://Music/BGM/all_fast.mp3" id="2_550dx"]
[ext_resource type="PackedScene" uid="uid://cqul01thxosc3" path="res://Lamp.tscn" id="3_0jtv5"]
[ext_resource type="PackedScene" uid="uid://jxaid0s13ejq" path="res://hud.tscn" id="3_faqr0"]
[ext_resource type="Texture2D" uid="uid://bjyj3g1apmu3v" path="res://Art/Level_3.png" id="4_uh55s"]
[ext_resource type="Texture2D" uid="uid://ce0os1mvffj2q" path="res://Art/Black gradient.png" id="6_sngw1"]
[ext_resource type="Texture2D" uid="uid://cmfk3rshf74f3" path="res://Art/Luna.png" id="8_m0hkm"]
[ext_resource type="PackedScene" uid="uid://csethspg6l3lt" path="res://dialogue.tscn" id="9_7scgd"]
[ext_resource type="PackedScene" uid="uid://d8nkndsuti40" path="res://fence.tscn" id="10_hvu1h"]
[ext_resource type="AudioStream" uid="uid://cknage2mjqs2a" path="res://Music/SFX/monster.mp3" id="11_udctq"]

[sub_resource type="Curve2D" id="Curve2D_7uqmh"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -55.957, -92.1363, 0, 0, 0, 0, 1149.5, -93.9801, 0, 0, 0, 0, 1154, 632.423, 0, 0, 0, 0, 59.9431, 633.401, 0, 0, 0, 0, -57.717, 638.423, 0, 0, 0, 0, -53.3171, -87.2839, 0, 0, 0, 0, -51.5572, -86.4468, 0, 0, 0, 0, -3, -8)
}
point_count = 8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3dsl"]
size = Vector2(38.425, 4.68748)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_he0e4"]
size = Vector2(57.6, 2.85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kr40y"]
size = Vector2(39, 45)

[node name="Level_3" type="Node2D"]
script = ExtResource("1_7wba6")

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="MobTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LightTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="MobPath" type="Path2D" parent="."]
position = Vector2(-25.4102, -20.7222)
scale = Vector2(1.1364, 1.1947)
curve = SubResource("Curve2D_7uqmh")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(-55.957, -92.1363)
rotation = -0.00152955

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
position = Vector2(39, 53)
stream = ExtResource("2_550dx")

[node name="HUD" parent="." instance=ExtResource("3_faqr0")]

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.458824, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 1149.0
offset_bottom = 647.0
texture = ExtResource("4_uh55s")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(559, 559)

[node name="Sola" parent="." instance=ExtResource("2_1sulp")]
z_index = 2
position = Vector2(593, 576)
slide_on_ceiling = false

[node name="Camera2D" type="Camera2D" parent="Sola"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 1151
limit_bottom = 652
position_smoothing_enabled = true
position_smoothing_speed = 8.0
editor_draw_limits = true

[node name="CanvasLayer" type="CanvasLayer" parent="Sola/Camera2D"]

[node name="TextureRect" type="TextureRect" parent="Sola/Camera2D/CanvasLayer"]
offset_left = -7.0
offset_top = -8.0
offset_right = 1160.0
offset_bottom = 657.0
texture = ExtResource("6_sngw1")
expand_mode = 1

[node name="MonsterBounds" type="StaticBody2D" parent="." groups=["monster_bounds"]]
position = Vector2(798, -1008)
scale = Vector2(25, 25)
disable_mode = 1
collision_layer = 64
collision_mask = 0

[node name="Left" type="CollisionShape2D" parent="MonsterBounds"]
position = Vector2(-34.56, 53.32)
rotation = 1.5708
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_g3dsl")

[node name="Bottom" type="CollisionShape2D" parent="MonsterBounds"]
position = Vector2(-8.12, 70.28)
shape = SubResource("RectangleShape2D_he0e4")

[node name="Top" type="CollisionShape2D" parent="MonsterBounds"]
position = Vector2(-7.56, 36.16)
shape = SubResource("RectangleShape2D_he0e4")

[node name="Right" type="CollisionShape2D" parent="MonsterBounds"]
position = Vector2(16.76, 53.44)
rotation = 1.5708
shape = SubResource("RectangleShape2D_g3dsl")

[node name="Bounds" type="StaticBody2D" parent="." groups=["bounds"]]
position = Vector2(38, -48)
scale = Vector2(20, 20)
disable_mode = 1
collision_layer = 128
collision_mask = 0

[node name="Left" type="CollisionShape2D" parent="Bounds"]
position = Vector2(-4.35, 18.25)
rotation = 1.5708
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_g3dsl")

[node name="Bottom" type="CollisionShape2D" parent="Bounds"]
position = Vector2(26.85, 36.45)
shape = SubResource("RectangleShape2D_he0e4")

[node name="Top" type="CollisionShape2D" parent="Bounds"]
position = Vector2(26.9, 0.85)
shape = SubResource("RectangleShape2D_he0e4")

[node name="Right" type="CollisionShape2D" parent="Bounds"]
position = Vector2(58.05, 19)
rotation = 1.5708
shape = SubResource("RectangleShape2D_g3dsl")

[node name="Luna" type="TextureRect" parent="."]
offset_left = 562.0
offset_top = 30.0
offset_right = 605.0
offset_bottom = 71.0
texture = ExtResource("8_m0hkm")
expand_mode = 1

[node name="Ending" type="StaticBody2D" parent="."]
position = Vector2(16, -14)
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ending"]
position = Vector2(568.5, 65.5)
shape = SubResource("RectangleShape2D_kr40y")

[node name="DialogueBox" parent="." instance=ExtResource("9_7scgd")]

[node name="Fences" type="Node" parent="."]

[node name="Fence" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(65, 55)

[node name="Fence2" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(151, 55)

[node name="Fence3" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(236, 55)

[node name="Fence4" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(322, 55)

[node name="Fence5" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(408, 55)

[node name="Fence6" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(494, 70)

[node name="Fence7" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(580, 92)

[node name="Fence8" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(666, 71)

[node name="Fence9" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(752, 55)

[node name="Fence10" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(837, 55)

[node name="Fence11" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(923, 55)

[node name="Fence12" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(1009, 55)

[node name="Fence13" parent="Fences" instance=ExtResource("10_hvu1h")]
position = Vector2(1095, 55)

[node name="Lamps" type="Node" parent="."]

[node name="Lamp" parent="Lamps" instance=ExtResource("3_0jtv5")]
z_index = 1
position = Vector2(91, 77)

[node name="Lamp2" parent="Lamps" instance=ExtResource("3_0jtv5")]
z_index = 1
position = Vector2(100, 504)

[node name="Lamp3" parent="Lamps" instance=ExtResource("3_0jtv5")]
z_index = 1
position = Vector2(1058, 85)

[node name="Lamp4" parent="Lamps" instance=ExtResource("3_0jtv5")]
z_index = 1
position = Vector2(1062, 511)

[node name="Alldead" type="AudioStreamPlayer2D" parent="."]
position = Vector2(116, 345)
stream = ExtResource("11_udctq")

[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="LightTimer" to="." method="_on_light_timer_timeout"]
[connection signal="damage" from="Sola" to="." method="change_health"]
[connection signal="heal" from="Sola" to="." method="heal"]
[connection signal="light_enter" from="Sola" to="." method="shine"]
[connection signal="light_exit" from="Sola" to="." method="flicker"]
[connection signal="all_dialogues_read" from="DialogueBox" to="." method="_on_dialogue_box_all_dialogues_read"]
